--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html>
 <head>
 	<title>To Do App</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
-	
 </head>
 <body>
 	<div id="app">
-		<h1>To-Do List</h1>
-		<input type="text" name="">
+		<h1>To-Do List  <span id="plus-sign"><i class="fas fa-plus"></i></span></h1>
+		<input type="text" name="" placeholder="Add new todo">
 		<ul>
-			<li><span>X</span> Practice, Practice, and Practice</li>
-			<li><span>X</span> Do more, do more, and do more</li>
-			<li><span>X</span> Think less, think less and think less</li>
-			<li><span>X</span> Rejoice, rejoice and rejoice</li>
+			<li><span class="trash-can"><i class="fas fa-trash-alt"></i></span> Practice, Practice, and Practice</li>
+			<li><span class="trash-can"><i class="fas fa-trash-alt"></i></span> Do more, do more, and do more</li>
+			<li><span class="trash-can"><i class="fas fa-trash-alt"></i></span> Think less, think less and think less</li>
+			<li><span class="trash-can"><i class="fas fa-trash-alt"></i></span> Rejoice, rejoice and rejoice</li>
 		</ul>
 		
 	</div>
